# promptDeck

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE.original.md  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  recessed_studio_prd.html
backend/: .dockerignore  .env.example  Dockerfile  README.md  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_presentations_and_slides.py  0003_comment_threads_and_comments.py  0004_share_links_and_export_jobs.py  0005_nullable_comment_authors.py  0006_audit_log.py  0007_entra_and_presentation_members.py  0008_user_llm_system_settings.py  0009_deck_prompt_jobs.py  0010_deck_prompt_job_llm_usage.py  0011_user_llm_provider_columns.py  0012_deck_prompt_job_is_generation.py  0013_refresh_sessions.py  0014_diagrams_and_prompt_job_types.py  (+1 more)
backend/app/: __init__.py  config.py  deps.py  logging_channels.py  logging_conf.py  main.py  rate_limit.py
backend/app/db/: session.py
backend/tests/: conftest.py  factories.py  log_utils.py  test_acl.py  test_admin.py  test_alembic_sqlite.py  test_auth.py  test_bundle_upload.py  test_comments.py  test_config.py  test_deck_llm_completion.py  test_deck_llm_defaults.py  test_deck_prompt_jobs.py  test_diagram_parsers.py  test_diagrams.py  test_factories_build.py  test_health.py  test_members.py  test_presentation_source_artifacts.py  test_presentations.py  test_shares_exports.py  test_slide_manifest.py  test_static_site.py  test_versions.py  test_zip_safety.py
(+183 files in other folders)
